[Reveal] fix: maximise height of frames wrapping code

--- a/slides/css/theme.css
+++ b/slides/css/theme.css
@@ -37,3 +37,7 @@ ol li:before {
 .reveal pre {
   max-width: 100% !important;
 }
+
+.reveal pre code {
+  max-height: none;
+}
